MyDemoOrg/force-app/main/default/objects/Festival__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>this field will keep the value of the capacity of the place for people. it&apos;s a simple number.</description>
    <label>Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>