MyDemoOrg/force-app/main/default/objects/Festival__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field tells us when the particular festival is going to finish. this field will keep date record.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>