MyDemoOrg/force-app/main/default/objects/Festival__c/fields/General_Admission_Ticket_Sold__c.field-meta.xml
<CustomField>
    <fullName>General_Admission_Ticket_Sold__c</fullName>
    <description>total number of the tickets sold in general section.</description>
    <label>General Admission Ticket Sold</label>
    <summarizedField>Attendee__c.Tickets_Purchased__c</summarizedField>
    <summaryFilterItems>
        <field>Attendee__c.Ticket_type__c</field>
        <operation>equals</operation>
        <value>General</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee__c.Festival__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>