MyDemoOrg/force-app/main/default/objects/Festival__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This field shows when the festival is going to start. It will keep the date record.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>