MyDemoOrg/force-app/main/default/objects/Festival__c/fields/Total_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Sold__c</fullName>
    <description>this gives the total number of the tickets sold including both the VIP and the general.</description>
    <formula>VIP_Ticket_Sold__c + General_Admission_Ticket_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>